Fixed dropdown items not showing

--- a/src/assets/scss/document_category.scss
+++ b/src/assets/scss/document_category.scss
@@ -10,6 +10,7 @@
     background-color: $white;
     height: 40px;
     max-width: 220px;
+    position: absolute;
   }
 
   .category-drop-down {
